<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".Foguete">

    <TextView
        android:id="@+id/txtCuri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squada_one"
        android:text="@string/curiosidade"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVoltar2"
        app:layout_constraintVertical_bias="0.609"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtLanca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/squada_one"
        android:text="@string/lan_amento_do_foguete"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.012" />

    <ImageView
        android:id="@+id/imgNave3"
        android:layout_width="168dp"
        android:layout_height="198dp"
        android:contentDescription="@string/imgnave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLanca"
        app:layout_constraintVertical_bias="0.386"
        app:srcCompat="@drawable/ic_spacecraft_svg"
        tools:ignore="ImageContrastCheck" />

    <Button
        android:id="@+id/btnVoltar2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="119dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btnstyle"
        android:text="@string/voltar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNave3" />
</androidx.constraintlayout.widget.ConstraintLayout>